[bdist_wheel]
universal=1

[metadata]
author = Jeremiah H. Savage
author_email = jeremiahsavage@gmail.com
description = From a BAM, convert each readgroup to a json object needed to create a GDC Read Group node.
long-description = file: README.md
long-description-content-type = text/markdown
url = https://github.com/NCI-GDC/bam_readgroup_to_gdc_json/
version = 0.25
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Bio-Informatics